--- a/02-Music Player/index.html
+++ b/02-Music Player/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Player</title>
 
-    <!-- Custom Styling -->
+    <link rel="icon" type="image/icon" href="./media/favicon.ico" />
+
+    <!-- CSS Linkage -->
     <link rel="stylesheet" href="./styles.css" />
     <!-- External resources -->
     <script
